[gd_scene load_steps=10 format=2]

[ext_resource path="res://joc pong/PANTALLA INICI.gd" type="Script" id=1]
[ext_resource path="res://joc pong/HUD/1jugador.PNG" type="Texture" id=2]
[ext_resource path="res://joc pong/HUD/2jugadors.png" type="Texture" id=3]
[ext_resource path="res://joc pong/HUD/SORTIRSELECCINAT.png" type="Texture" id=4]
[ext_resource path="res://joc pong/HUD/1jugadorseleccionat.png" type="Texture" id=5]
[ext_resource path="res://joc pong/HUD/2jugadorsseleccionat.png" type="Texture" id=6]
[ext_resource path="res://joc pong/HUD/SORTIR.png" type="Texture" id=7]
[ext_resource path="res://joc pong/HUD/controls_seleccionat.png" type="Texture" id=8]
[ext_resource path="res://joc pong/HUD/controls.png" type="Texture" id=9]

[node name="PANTALLA INICI" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 2000.0
margin_bottom = 2000.0
color = Color( 0.109804, 0.0941176, 0.0941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 300.0
margin_right = 1920.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1920.0
custom_constants/separation = 100

[node name="Tween" type="Tween" parent="."]

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 643.0
margin_top = -200.0
margin_right = 1277.0
margin_bottom = -115.0
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 1927.5
margin_top = 500.0
margin_right = 2646.5
margin_bottom = 585.0
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 6 )

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = -429.221
margin_top = 839.043
margin_right = -14.221
margin_bottom = 924.043
size_flags_horizontal = 4
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton4" type="TextureButton" parent="."]
margin_left = -688.0
margin_top = 712.0
margin_right = 6.0
margin_bottom = 799.0
size_flags_horizontal = 4
texture_normal = ExtResource( 9 )
texture_focused = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="TextureButton4" to="." method="_on_TextureButton4_pressed"]
